NOCC 1.2    ?? ??, 2006

    * Bug #1477984 : Mark as (Un)read, how can one see it works? (Arnaud
      Boudou).
    * Bug #1444882 : NOCC display source code instead of form (Arnaud Boudou). 

NOCC 1.1    February 28, 2006

    * Patch #1438939 : get_default_from_address in conf.php (Roman Korolyov).
    * Patch #1438393 : strict UTF-8 charset issue (Roman Korolyov).
    * register_globals php directive must now be set to 'Off' (Arnaud Boudou).
    * Bug #1438276 : Multiple vunerabilities (Arnaud Boudou).
    * Fix issue with outgoing mail From, To, CC and BCC encoding (Arnaud Boudou).
    * Fix issue with outgoing mail subject encoding (Arnaud Boudou).
    * Bug #1421767 : Attachments name repeat (Arnaud Boudou).
    * Bug #1409322 : Forwarding mail (Arnaud Boudou).
    * Use standardized RSS icon (Arnaud Boudou).

NOCC 1.0    January 01, 2006

    * Clean PHP code (Arnaud Boudou).
    * Fix issues with attachment downloading (Arnaud Boudou).
    * Update Italian translation (daiceman, patch #1369275).
    * Doesn't display link to contacts list if $conf->prefs_dir is empty (Arnaud
      Boudou).
    * Fix Javascript issues (Arnaud Boudou).
    * Updated german translation (strongbows, patch #1353859).
    * Render images embedded within HTML emails (Arnaud Boudou, patch #501449).
    * Add option to automatically choose mail domain to use with HTTP host
      (Edwin Meester, patch #1268985).
    * Sort IMAP folder names (Arnaud Boudou, bug #1351980).
    * Add Japanese language file (Tadashi Jokagi, patch #1349062).
    * Encrypt session stored passwords (Arnaud Boudou & Olivier Jourdat,
      RFE #811901, bug #1348164).
    * Improve RSS feed with subfolders (Arnaud Boudou).
    * Add compatibility with PHP 5.0.5 (Arnaud Boudou, bug #1291160).
    * Fix issue with message wrapping (Arnaud Boudou).
    * Add "To" header into mail list view (Arnaud Boudou, RFE #494191).
    * Add Catalan language file (David Gimeno i Ayuso).