@@ -1,5 +1,6 @@
 NOCC 1.2    ?? ??, 2006
 
+    * Fix HTML entities translation and replies formating (Arnaud Boudou).
     * Bug #1477984 : Mark as (Un)read, how can one see it works? (Arnaud
       Boudou).
     * Bug #1444882 : NOCC display source code instead of form (Arnaud Boudou). 
